--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -14,8 +14,8 @@ jobs:
       with:
         go-version: '1.21.5'
 
-    - name: Build
+    - name: Build 💞
       run: go build -v ./...
 
-    - name: Test
+    - name: Test 💕
       run: go test -v ./...
