--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -9,13 +9,16 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    - name: Set up Go
+    - name: Set up Go 🤲
       uses: actions/setup-go@v4
       with:
         go-version: '1.21.5'
 
-    - name: Build 💞
+    - name: Build 🏋️
       run: go build -v ./...
 
-    - name: Test 💕
+    - name: Test 🤘
       run: go test -v ./...
+
+    - name: Package 🎁
+      run: zip infra/lambda.zip main.go 
