--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -27,9 +27,9 @@ jobs:
       uses: actions/checkout@v3
     
     - name: Setup Terraform
-      uses: hashicorp/setup-terraform@v1
+      uses: hashicorp/setup-terraform@v3
       with:
-        terraform_version: 3.0.0
+        terraform_version: "1.1.7"
 
     - name: Terraform fmt
       id: fmt
