--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
       run: go test -v ./...
 
     - name: Package 🎁
-      run: zip infra/lambda.zip main.go 
+      run: zip terraform/lambda.zip main.go 
 
   terraform:
     needs: build
@@ -45,7 +45,7 @@ jobs:
 
     - name: Terraform Init
       id: init
-      run: terraform init
+      run: terraform init terraform/
 
     - name: Terraform Validate
       id: validate
@@ -53,5 +53,10 @@ jobs:
 
     - name: Terraform Plan
       id: plan
-      run: terraform plan -no-color
-      continue-on-error: true
+      run: terraform plan -no-color -input=false terraform/
+
+    - name: Terraform Apply
+      run: |
+        terraform apply -input=false -auto-approve \
+        -var="access_key=${{ secrets.AWS_ACCESS_KEY }}" \
+        -var="secret_key=${{ secrets.AWS_SECRET_ACESS_KEY }}" terraform/
