--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Package 🎁
       run: zip terraform/lambda.zip main.go 
 
-  terraform:
+  deploy_aws:
     needs: build
     runs-on: ubuntu-latest
     steps:
@@ -45,7 +45,7 @@ jobs:
 
     - name: Terraform Init
       id: init
-      run: terraform init terraform/
+      run: terraform init -chdir=terraform/
 
     - name: Terraform Validate
       id: validate
@@ -53,10 +53,10 @@ jobs:
 
     - name: Terraform Plan
       id: plan
-      run: terraform plan -no-color -input=false terraform/
+      run: terraform plan -no-color -input=false -chdir=terraform/
 
     - name: Terraform Apply
       run: |
         terraform apply -input=false -auto-approve \
         -var="access_key=${{ secrets.AWS_ACCESS_KEY }}" \
-        -var="secret_key=${{ secrets.AWS_SECRET_ACESS_KEY }}" terraform/
+        -var="secret_key=${{ secrets.AWS_SECRET_ACESS_KEY }}" -chdir=terraform/
