--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -46,6 +46,9 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v3
+
+    - name: List Folder
+      run: ls
     
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v3
