--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -31,10 +31,17 @@ jobs:
         run: go test -v ./...
 
       - name: Package 🎁
-        run: zip terraform/lambda.zip main.go 
+        run: zip lambda.zip main.go 
 
       - name: List Folder
-        run: ls terraform
+        run: ls
+
+      - name: 'Upload Artifact'
+        uses: actions/upload-artifact@v3
+        with:
+          name: lambda
+          path: lambda.zip
+          retention-days: 5
 
   terraform:
     needs: build
@@ -46,6 +53,11 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v3
+
+    - name: Download lambda.zip
+      uses: actions/download-artifact@v3
+      with:
+        name: lambda
 
     - name: List Folder
       run: ls
