--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -55,6 +55,7 @@ jobs:
       uses: actions/download-artifact@v3
       with:
         name: lambda
+        path: ./terraform
 
     - name: List Folder
       run: ls
