Revert "fix: zip artifact"
This reverts commit e362b6cdb3390d653f1a1c397868712befc8858b.

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -44,17 +44,18 @@ jobs:
       - name: List Folder
         run: ls
 
+      - name: Package 🎁
+        run: zip lambda.zip bootstrap
+
       - name: 'Upload Artifact'
         uses: actions/upload-artifact@v3
         with:
           name: lambda
-          path: bootstrap
+          path: lambda.zip
           retention-days: 5
 
   terraform:
-    needs: 
-      - build
-      - test
+    needs: build
     runs-on: ubuntu-latest
     defaults:
       run:
