feat: ajustando nome da pipe (#13)

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -45,7 +45,7 @@ jobs:
           path: lambda.zip
           retention-days: 5
 
-  terraform:
+  deploy:
     needs: 
       - build
       - test
