feat: adicionando if no destroy

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -102,6 +102,7 @@ jobs:
       - deploy
     runs-on: ubuntu-latest
     environment: production
+    if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop'
     defaults:
       run:
         shell: bash
