--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -115,6 +115,15 @@ jobs:
       uses: hashicorp/setup-terraform@v3
       with:
         terraform_version: "1.1.7"
+
+    - name: Terraform init 🌛
+      id: init
+      run: terraform init -backend-config="bucket=$BUCKET_TF_STATE"
+
+    - name: Terraform Plan 🍆
+      id: plan
+      run: terraform plan -input=false
+      continue-on-error: true
     
     - name: Terraform Destroy 💣
       if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop'
