--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -110,6 +110,12 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v3
+
+    - name: Download lambda.zip 👇
+      uses: actions/download-artifact@v3
+      with:
+        name: lambda
+        path: ./terraform
     
     - name: Setup Terraform 🤲
       uses: hashicorp/setup-terraform@v3
